# robif2b

./: CMakeLists.txt  Doxyfile.in  robif2b-config.cmake.in
cmake/: FindKortexApi.cmake  PackageRegistry.cmake
include/robif2b/functions/: 2dof.h  ethercat.h  kelo_drive.h  kelo_power_board.h  kinova_gen3.h
include/robif2b/types/: 2dof.h  control_mode.h  ethercat.h  kelo_drive.h  kelo_drive_api.h  kelo_power_board.h  kelo_power_board_api.h  kinova_gen3.h
src/: CMakeLists.txt
src/example/: 2dof_example.c  CMakeLists.txt  kelo_robile_example.c  kinova_gen3_example.c
src/nbx/: CMakeLists.txt
src/nbx/2dof/: 2dof.c  CMakeLists.txt
src/nbx/ethercat/: CMakeLists.txt  ethercat.c
src/nbx/kelo/: CMakeLists.txt  kelo_drive.c  kelo_power_board.c
src/nbx/kortex/: CMakeLists.txt  kinova_gen3.cpp  kinova_gen3_comm.hpp
src/ubx/: CMakeLists.txt  ubx_env.sh.in
src/ubx/2dof/: CMakeLists.txt  ubx_2dof.c  ubx_2dof.h  ubx_2dof.lua
src/ubx/2dof/usc/: ubx_2dof.usc  ubx_2dof_trig.usc
src/ubx/kortex/: CMakeLists.txt  ubx_kinova_gen3.c  ubx_kinova_gen3.h  ubx_kinova_gen3.lua
src/ubx/kortex/usc/: ubx_kinova_gen3.usc  ubx_kinova_gen3_trig.usc
